# dice_roller

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/dice_roller/: __init__.py  core.py  gui.py  main.py
tests/: test_core.py  test_main.py
